# platform-engine

./: .gitignore  CMakeLists.txt  README.md  SConscript  SConstruct  animation.cpp  animation.h  argument.cpp  background.cpp  background.h  camera.cpp  camera.h  game.cpp  game.h  object.h  tile.cpp  tile.h  world.cpp  world.h
game/: animation.cpp  background.cpp  camera.cpp  camera.h  collision-map.cpp  collision-map.h  cutscene.cpp  cutscene.h  game.cpp  game.h  options.cpp  tile.cpp  world.cpp  world.h
object/: object.cpp  object.h
resources/: animation.cpp  animation.h  camera.cpp  camera.h  collisions.cpp  collisions.h  control.h  font.cpp  font.h  object.cpp  object.h  tile.cpp  value.cpp  value.h
script/: CMakeLists.txt  object.cpp  object.h  python.cpp  python.h  script.cpp  script.h
src/: argument.cpp  argument.h  main.cpp
src/game/: game.cpp  game.h  options.cpp  options.h  world.cpp  world.h
src/resources/: animation.cpp  animation.h  background.cpp  background.h  camera.cpp  camera.h  collisions.cpp  collisions.h  font.cpp  font.h  object.cpp  object.h  tile.cpp  tile.h  value.cpp  value.h
src/script/: CMakeLists.txt  control.cpp  control.h  object.cpp  object.h  python.cpp  python.h  script.cpp  script.h
